# stash-plugins

./: .clineignore  .flake8  .gitignore  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TEST.md  build_site.sh  docker-compose.yml  graphql.config.yml  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.cfg  stash-plugins.code-workspace
.clinerules/: cline-memory-bank.md  context7-automation.md
.github/workflows/: deploy.yml  test.yml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
notebooks/: gallery_linker.ipynb  gallery_linker_old.ipynb
plugins/: __init__.py
plugins/GalleryLinker/: PERFORMER_LINKING.md  README.md  __init__.py  datatypes.py  gallery_linker.js  gallery_linker.py  gallery_linker.yml  performer_gallery_linker.py  requirements.txt  scene_gallery_linker.py  util.py
plugins/GalleryLinker/examples/: gallery_linker_extension.py  scene_gallery_linker.py
plugins/void_common/: __init__.py  util.py
plugins/void_common/models/: __init__.py  stash.py
plugins/void_common/models/stash/: migration_model.py  plugin_model.py  scalars.py  scalars_model.py  stats_model.py  version_model.py
resources/graphql/: schema.graphql
resources/graphql/graphiql/: package.json
resources/graphql/queries/: scenes-no-galleries.gql
scripts/: gen-stash-models.sh
tests/: conftest.py  gallery_linker.ipynb
tests/fixtures/: test_data.py
tests/test_plugins/GalleryLinker/: test_gallery_linker.py
