[metadata]
name = stash-plugins
description = Collection of plugins for Stash media management system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stashapp/CommunityScripts
author = Stash Community
author_email = noreply@stashapp.cc
license = AGPL-3.0
license_files = LICENCE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Video

[options]
packages = find:
python_requires = >=3.8
install_requires =
    stashapp-tools>=0.2.0
    requests>=2.28.0

[options.packages.find]
include = plugins*, tests*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    black>=23.0.0
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.0.0
    pre-commit>=3.0.0

test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    responses>=0.23.0
    freezegun>=1.2.0

# Tool configuration that doesn't support pyproject.toml yet

[tool:pytest]
minversion = 7.0
addopts =
    --verbose
    --tb=short
    --strict-markers
    --strict-config
    --cov=plugins
    --cov-report=term-missing
    --cov-report=html:tests/htmlcov
    --cov-report=xml:tests/coverage.xml
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
markers =
    unit: Unit tests
    integration: Integration tests
    slow: Slow running tests
    network: Tests that require network access
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[pydocstyle]
convention = google
add_ignore = D100,D101,D102,D103,D104,D105,D106,D107

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[mypy-tests.*]
ignore_errors = true

[mypy-plugins.*]
disallow_untyped_defs = false