[metadata]
name = stash-plugins
description = Collection of plugins for Stash media management system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stashapp/CommunityScripts
author = Stash Community
author_email = noreply@stashapp.cc
license = AGPL-3.0
license_files = LICENCE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Video

[options]
packages = find:
python_requires = >=3.10
install_requires =
    stashapp-tools>=0.2.0
    requests>=2.28.0

[options.packages.find]
include = plugins*

[options.extras_require]
dev =
    black>=23.0.0
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.0.0
    pre-commit>=3.0.0

[pydocstyle]
convention = google
add_ignore = D100,D101,D102,D103,D104,D105,D106,D107

[mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[mypy-tests.*]
ignore_errors = true

[mypy-plugins.*]
disallow_untyped_defs = false